# ANN

./: .gitignore  .pre-commit-config.yaml  ANN.md  Activation.py  Neuron.py  ReLu.py  pyproject.toml  readme.md
ANN/: Dense.py  Layer.py  MSE.py  Network.py  Neuron.py  ReLu.py  __init__.py  model.py  network.py  neuron.py  sequential.py
ANN/activation_functions/: __init__.py  activation.py  leaky_ReLu.py  linear.py  reLu.py  sigmoid.py  softmax.py  tanh.py
ANN/callbacks/: __init__.py  callback.py  reduce_lr_on_plateau.py
ANN/correlate/: __init__.py  correlate.py  dilate.py  pad.py  shape.py  strided.py
ANN/errors/: __init__.py  shapeError.py
ANN/layers/: Dense.py  __init__.py  batch_normalization.py  convolutional.py  dense.py  dense_matrix.py  flatten.py  layer.py  max_pooling.py  random_rot.py  random_shift.py  random_zoom.py
ANN/layers/initializers/: __init__.py  gorlot.py
ANN/loss_functions/: MSE.py  __init__.py  binary_cross_entropy.py  categorical_cross_entropy.py  cross_entropy.py  loss.py  mean_square_error.py  square_error.py  tanh.py
ANN/metrics/: accuracy.py  metric.py
ANN/models/: __init__.py  model.py  sequential.py
ANN/optimizers/: __init__.py  adam.py  optimizer.py  sgd.py
ANN/tests/: test_cnn_model.py  test_dense_model.py
ANN/tests/activation_functions/: test_activation_functions.py  test_leakyReLu.py
ANN/tests/layers/: test_batch_normalization.py  test_batchnormalization.py  test_conv2d.py  test_dense.py  test_maxpool2d.py
ANN/tests/optimizers/: test_adam.py  (+1 more)
ANN_kurtrahir.egg-info/: PKG-INFO  SOURCES.txt
MNIST/: MNIST.ipynb
(+2 files in other folders)
