[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "ANN_kurtrahir"
version = "0.0.1"
authors = [
  { name="Kurt Rahir", email="kurtrahir@gmail.com" },
]
description = "A package for fully connected neural networks."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/kurtrahir/ANN"
"Bug Tracker" = "https://github.com/kurtrahir/ANN/issues"